--- a/DISCORD_TOKEN.env
+++ b/DISCORD_TOKEN.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTMyOTA2MTc5MDkzMTQ4ODc2OA.Gj3cFd.NR75TRVMrbmDWe1-VYtULr2avfxTbtYVpfkAz4
+DISCORD_TOKEN=MTMyOTA2MTc5MDkzMTQ4ODc2OA.GNHrI5.A_ZdmmgOYXPfZeNQsRlk66pTAMvjcSwoScjuFE
