--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 .env
 __pycache__/
 *.pyc
-DISCORD_TOKEN=MTMyOTA2MTc5MDkzMTQ4ODc2OA.GNHrI5.A_ZdmmgOYXPfZeNQsRlk66pTAMvjcSwoScjuFE
+DISCORD_TOKEN=MTMyOTA2MTc5MDkzMTQ4ODc2OA.GfES-H.U6mkU2emyhSl0FnN-IM9lleB6ZCE_3LQDei10w
